assets/dev/sass/generic/_generic.scss
/* ... */
.wps-tooltip_templates {
  position: relative;
  display: inline-block;
}

.tooltip-premium {
  visibility: hidden;
  min-width: 216px;
  position: absolute;
  z-index: 9;
  bottom: 100%;
  left: 50%;
  opacity: 0;
  transition: opacity 0.3s;

  & > span {
    border: 1px solid #DDE0E8;
    border-radius: 8px;
    position: relative;
    background-color: #fff;
    display: flex;
    box-sizing: border-box;
    box-shadow: 4px 4px 15px 0 #3130400D;
    cursor: default;

    a {
      background: #404BF20D;
      font-size: 13px;
      font-weight: 500;
      color: #404BF2;
      padding: 10px;
      cursor: pointer;
      white-space: nowrap;
     }

    span {
      color: #56585A;
      font-size: 13px;
      font-weight: 500;
      padding: 10px;
      white-space: nowrap;
      cursor: default;
    }


    &:after, &:before {
      bottom: 100%;
      right: 30px;
      border: solid transparent;
      content: "";
      height: 0;
      width: 0;
      position: absolute;
      pointer-events: none;
      .rtl &{
        right: unset;
        left: 30px;
      }
    }

    &:after {
      border-color: rgba(255, 255, 255, 0);
      border-bottom-color: #fff;
      border-width: 5px;
    }

    &:before {
      border-color: rgba(221, 224, 232, 0);
      border-bottom-color: #DDE0E8;
      border-width: 6px;
      margin-right: -1px;
      .rtl &{
        margin-right:0;
        margin-left: -1px;
      }
    }
  }

  &--bottom {
    top: 100%;
    padding-top: 8px;
  }

  &--side {
    top: 50%;
    bottom: unset;
    transform: translateY(-50%);


  }

  &--left {
    left: unset;
    right: 100%;
    padding-right: 8px;

    .rtl &{
      left:  100%;
      right: unset;
      padding-right: 0;
      padding-left: 8px;
    }

    &.tooltip-premium--side{
      & > span{
        &:after ,&:before {
          left: 100%;
          top: 50%;
          bottom: unset;
          right: unset;
          margin-right: unset;
          transform: translateY(-50%);
          border: 6px solid rgba(0, 0, 0, 0);

          .rtl &{
            right: 100%;
            left: unset;
          }
        }
        &:after {
           border-left-color: #fff;
          .rtl &{
            border-left-color:transparent;
            border-right-color: #fff;
          }
         }

        &:before {
          border-left-color: #DDE0E8;
          border-width: 7px;
          .rtl &{
            border-left-color: transparent;
            border-right-color: #DDE0E8;
          }
        }
      }

  }
  }

  &--right {
    right: 0;
    left: unset;

    .rtl &{
      right: unset;
      left: 0;
    }
  }
}


@-webkit-keyframes wps-cycle {
  from {
    -webkit-transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes wps-cycle {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@-moz-keyframes wps-cycle {
  from {
    -moz-transform: rotate(0deg);
  }
  to {
    -moz-transform: rotate(360deg);
  }
}


.v-image-lazy {
   transition: all .5s ease-in 0s;
}

